ajout de détail

--- a/src/component/Entretien.module.css
+++ b/src/component/Entretien.module.css
@@ -16,6 +16,10 @@
     margin-top: 2rem;
 }
 
+.card-container h3 {
+    text-align: center;
+}
+
 .card-container:last-child {
     justify-content: center;
 }
