--- a/pages/Home/AppointmentForm.module.css
+++ b/pages/Home/AppointmentForm.module.css
@@ -1,4 +1,4 @@
-
+/* pages/Home/AppointmentForm.module.css */
 .appointmentContainer {
     display: flex;
     flex-direction: column;
@@ -7,48 +7,72 @@
     min-height: 100vh;
     background-color: #f2f2f2;
     padding: 1rem;
-  }
+}
 
-  .header {
+.header {
     text-align: center;
     color: #333;
     font-size: 2.5rem;
-    margin-bottom: 12rem;
-  }
-  
-  
-  .formContainer {
+    margin-bottom: 1rem;
+}
+
+.formContainer {
     background-color: #fff;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-  }
-  
-  .form {
+    max-width: 800px;
+    width: 100%;
+}
+
+.title {
+    text-align: center;
+    color: #333;
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+}
+
+.form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center;  /* Centre le contenu */
+    justify-content: space-between;
     gap: 1rem;
-  }
-  
-  .label {
+    width: 100%;
+}
+
+.columns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;  /* Distribue les colonnes uniformément */
+    gap: 1rem;
+    width: 100%;
+}
+
+
+.label {
     display: block;
     font-weight: bold;
     color: #333;
-  }
-  
-  .input {
+}
+
+.input {
     display: block;
     margin-top: 0.5rem;
     width: 100%;
-  }
-  
-  .button {
-    margin-top: 1rem;
-    width: 100%;
-  }
-  
+}
 
+.button {
+    margin-top: 1rem 5rem 1rem 5rem;
+    width: 30%;
+}
+
+.submitButton {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin-top: 1rem;
+}
 
 
 
