--- a/pages/Home/AppointmentForm.module.css
+++ b/pages/Home/AppointmentForm.module.css
@@ -13,11 +13,11 @@
     text-align: center;
     color: #333;
     font-size: 2.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 3rem;
 }
 
 .formContainer {
-    background-color: #fff;
+    background-color:  #A7ECEE;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
