--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
+
+/* styles.css */
+@font-face {
+  font-family: 'Roboto';
+  src: url('/fonts/roboto/Roboto-Regular.ttf') format('truetype');
+}
+
 html,
 body {
   padding: 0;
