--- a/styles/Home/Second-handGallery.module.css
+++ b/styles/Home/Second-handGallery.module.css
@@ -1,5 +1,11 @@
 
 /* pages/Home/Second-handGallery.module.css */
+
+.title {
+  text-align: center;
+  font-size: 2rem;
+}
+
 .CarContainer {
   display: flex;
   flex-direction: row;
