--- a/styles/Home/AppointmentForm.module.css
+++ b/styles/Home/AppointmentForm.module.css
@@ -62,9 +62,21 @@
     width: 100%;
 }
 
-.button {
+/* .button {
     margin-top: 1rem 5rem 1rem 5rem;
     width: 30%;
+} */
+
+.button {
+    display: block;
+    width: 20%;
+    padding: 10px;
+    background-color: #0070f3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-top: 20px;
 }
 
 .submitButton {
