--- a/styles/Admin/SpaceUsed.module.css
+++ b/styles/Admin/SpaceUsed.module.css
@@ -4,9 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
 }
 
 .title {
+    font-size: 24px;
     color: #333;
     margin-bottom: 30px;
 }
@@ -18,6 +20,7 @@
 
 .item {
     margin: 15px 0;
+    font-size: 18px;
 }
 
 .link {
@@ -28,3 +31,30 @@
 .link:hover {
     text-decoration: underline;
 }
+
+.employeeButton {
+    display: block;
+    width: 200px;
+    padding: 10px;
+    background-color: #0070f3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.employeeButton:hover {
+    background-color: #0051c9;
+}
+
+
+
+
+
+
+
+
+
+
