--- a/styles/Componentes/Header.module.css
+++ b/styles/Componentes/Header.module.css
@@ -80,7 +80,14 @@
     font-size: 24px;
 }
 
-
+.login {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20 40px;
+    padding: 20px 30px;
+    height: 10px;
+}
 
 
 
